doc user swagger
